refactor: update HtmlAnalyzer to use URI for URL connections and improve resource management